Update README.md with things I did, replace Deprecated Observer Class with JavaFX implementations, combined methods moveVertically and moveHorizontally into move(x,y), added horizontal movement to boss, enhance LevelParent's SRP by moving some actor related responsibilities to GameActorManager, added switchScreen method to switch between different FXML files, added ScreenController class which delegates user actions from FXML files to MainController, added menu, lose , win FXML files, added ammunition logic for user plane.